@startuml
title Class Diagram - Lexa Blocks (v4.0 - with match)

' ---------- Ядро игры ----------
class Game {
    - screen: pygame.Surface
    - clock: pygame.time.Clock
    - state: GameState
    - renderer: Renderer
    - event_handler: EventHandler
    - plugin: BasePlugin
    - _rects: list[Rect]
    + run()
}

class GameState {
    - board: Board
    - blocks_in_hand: list[Block]
    - active_block: Block
    - drag_offset: Vector2
    - score: int
    - level: int
    - game_over: bool
    - go_state: str
    - question_text: str
    - options: list[str]
    - correct_index: int
    - selected_index: int
    - input_text: str
    - correct_answer: str
    - match_left: list[str]
    - match_right: list[str]
    - match_answer: str
    - match_input: str
    + spawn_blocks()
    + spawn_rescue_blocks()          ' теперь добавляет кубы к существующим, а не заменяет
    + try_place_active_block(): bool
    + pick_block(point)
    + drag_active_block(point)
    - _add_score(points)
    - _is_game_over(): bool
    + apply_choice_question(text, options, correct)
    + apply_input_question(text, answer)
    + apply_match_question(left, right, answer)
    + apply_question(text, options, correct)   ' deprecated, но оставлен для совместимости
    + clear_question()
}

class Board {
    - grid: list[list[Color]]
    + draw(surface)
    + can_place(block, gx, gy): bool
    + place(block, gx, gy): int
    - _find_full_lines(): (rows, cols)
    - _erase_lines(rows, cols)
    - _clear_lines(): int            ' возвращает lines * 10 (правильная формула)
}

class Block {
    - shape: list[tuple]
    - color: Color
    - original_slot_pos: Vector2
    - pos: Vector2
    - is_placed: bool
    + draw(surface, scale)
    + collide_point(point): bool
}

class Renderer {
    - screen: pygame.Surface
    - font_big, font_med, font_small: Font
    + draw_frame(state, plugin): list[Rect]
    + draw_centered(font, text, color, y)
    + wrap_text(text, font, max_width): list[str]
    - _draw_score_bar(state)
    - _draw_overlay(state, plugin): list[Rect]
    - _draw_state_game_over(state): list[Rect]
    - _draw_centered(...)
    - _wrap_text(...)
    - _force_wrap(...)
}

class EventHandler {
    + process(events, state, option_rects, plugin)
    - _handle_game(event, state)
    - _handle_overlay(event, state, rects, plugin)
}

' ---------- Плагин ----------
class BasePlugin {
    + on_game_over(state, renderer): bool
    + on_restart(state)
    + draw_overlay(screen, state, renderer): list[Rect]
    + handle_click(pos, state, rects): bool
    + handle_keydown(event, state): bool   ' опционально
}

class QuizPlugin extends BasePlugin {
    + on_game_over(state, renderer): bool
    + on_restart(state)
    + draw_overlay(screen, state, renderer): list[Rect]
    + handle_click(pos, state, rects): bool
    + handle_keydown(event, state): bool
    - _draw_choice(screen, state, renderer): list[Rect]
    - _draw_loading(screen, state, renderer)
    - _draw_question(screen, state, renderer): list[Rect]
    - _draw_input(screen, state, renderer): list[Rect]
    - _draw_match(screen, state, renderer): list[Rect]
    - _draw_result_ok(screen, state, renderer)
    - _draw_result_fail(screen, state, renderer)
    - _get_fail_hint(state): list[str]
    - _handle_choice_click(pos, state, rects): bool
    - _handle_question_click(pos, state, rects): bool
    - _handle_input_click(pos, state, rects): bool
    - _handle_match_click(pos, state, rects): bool
    - _handle_match_keydown(event, state): bool
    - _check_input_answer(state)
    - _fetch(state, quiz_type)
    - _on_success(state, quiz_type, result)
    - _on_error(state, error_msg, quiz_type)
}

' ---------- Модуль api_client ----------
class "api_client" <<module>> {
    + {static} fetch_question_async(quiz_type, on_success, on_error)
    + {static} make_error_question(error_msg, quiz_type): (str, any)
    - {static} _fetch_question(quiz_type, on_success, on_error)
    - {static} _make_request(quiz_type): dict
    - {static} _parse_response(quiz_type, data): any
}

' ---------- Перечисления (константы) ----------
enum GameOverlayState {
    STATE_GAME_OVER
    STATE_CHOICE
    STATE_LOADING
    STATE_QUESTION
    STATE_INPUT
    STATE_MATCH
    STATE_RESULT_OK
    STATE_RESULT_FAIL
}

enum QuizType {
    QUIZ_CHOICE
    QUIZ_INPUT
    QUIZ_MATCH
}

' ---------- Связи ----------
Game *-- GameState : composition
Game *-- Renderer : composition
Game *-- EventHandler : composition
Game --> BasePlugin : aggregation (optional)
GameState *-- Board : composition
GameState o-- Block : aggregation
QuizPlugin --> "api_client" : uses
QuizPlugin ..> GameOverlayState : uses
QuizPlugin ..> QuizType : uses

note bottom of QuizPlugin
    Три типа викторины:
    - choice: выбор варианта
    - input: ввод ответа
    - match: установление соответствия (a1b2c3d4)
    При успехе: добавляет 3 спасательных куба,
    сохраняя уже имеющиеся.
end note
@enduml
